--- a/StormPC/StormPC/Views/Login/FirstTimeWindow.xaml
+++ b/StormPC/StormPC/Views/Login/FirstTimeWindow.xaml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Window
     x:Class="StormPC.Views.Login.FirstTimeWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -7,80 +8,111 @@
     xmlns:winui="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d">
 
-    <Grid Margin="20">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Border HorizontalAlignment="Center" 
+                VerticalAlignment="Center"
+                Width="650"
+                Height="640"
+                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                BorderThickness="1"
+                CornerRadius="8"
+                Translation="0,0,32">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="400"/>
+                </Grid.ColumnDefinitions>
 
-        <!-- Logo -->
-        <Image Grid.Row="0" 
-               Source="/Assets/img/logo/logo-512x512.png"
-               Width="120" 
-               Height="120"
-               Margin="0,0,0,10"/>
+                <!-- Infographic Image -->
+                <Border Grid.Column="0" 
+                        Background="#0078D4"
+                        CornerRadius="8,0,0,8">
+                    <Image Source="/Assets/img/logo/StormPC_Infographic.png"
+                           Height="640"
+                           Width="250"
+                           Stretch="UniformToFill"/>
+                </Border>
 
-        <StackPanel Grid.Row="1" Margin="0,0,0,20">
-            <TextBlock Text="Welcome to StormPC"
-                     FontSize="24"
-                     FontWeight="Bold"
-                     HorizontalAlignment="Center"/>
-            <TextBlock Text="Create Admin Account"
-                     FontSize="16"
-                     Margin="0,10,0,0"
-                     HorizontalAlignment="Center"/>
-        </StackPanel>
+                <!-- First Time Setup Form -->
+                <Grid Grid.Column="1" Margin="32,24">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="2" Margin="0,20">
-            <TextBlock Text="Username" Margin="0,0,0,5"/>
-            <winui:TextBox x:Name="UsernameTextBox" 
-                     Text="{x:Bind ViewModel.Username, Mode=TwoWay}"
-                     Margin="0,0,0,15"
-                     Padding="5"/>
+                    <!-- Logo -->
+                    <Image Grid.Row="0" 
+                           Source="/Assets/img/logo/logo-512x512.png"
+                           Width="120" 
+                           Height="120"
+                           Margin="0,0,0,10"/>
 
-            <TextBlock Text="Password" Margin="0,0,0,5"/>
-            <winui:PasswordBox x:Name="PasswordBox"
-                        Margin="0,0,0,15"
-                        Padding="5"/>
+                    <StackPanel Grid.Row="1" Margin="0,0,0,20">
+                        <TextBlock Text="Welcome to StormPC"
+                                 FontSize="24"
+                                 FontWeight="Bold"
+                                 HorizontalAlignment="Center"/>
+                        <TextBlock Text="Create Admin Account"
+                                 FontSize="16"
+                                 Margin="0,10,0,0"
+                                 HorizontalAlignment="Center"/>
+                    </StackPanel>
 
-            <TextBlock Text="Confirm Password" Margin="0,0,0,5"/>
-            <winui:PasswordBox x:Name="ConfirmPasswordBox"
-                        Margin="0,0,0,15"
-                        Padding="5"/>
+                    <StackPanel Grid.Row="2" Margin="0,20">
+                        <TextBlock Text="Username" Margin="0,0,0,5"/>
+                        <winui:TextBox x:Name="UsernameTextBox" 
+                                 Text="{x:Bind ViewModel.Username, Mode=TwoWay}"
+                                 Margin="0,0,0,15"
+                                 Padding="8"/>
 
-            <TextBlock Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
-                      Foreground="Red"
-                      TextWrapping="Wrap"
-                      Margin="0,10"/>
-        </StackPanel>
+                        <TextBlock Text="Password" Margin="0,0,0,5"/>
+                        <winui:PasswordBox x:Name="PasswordBox"
+                                    Margin="0,0,0,15"
+                                    Padding="8"/>
 
-        <Button Grid.Row="3"
-                Content="Create Admin Account"
-                Style="{StaticResource AccentButtonStyle}" 
-                HorizontalAlignment="Center"
-                Width="250"
-                Height="32"
-                Click="OnCreateAdminClick"/>
-                
-        <TextBlock Grid.Row="4"
-                  Text="{x:Bind ViewModel.VersionDescription, Mode=OneWay}"
-                  HorizontalAlignment="Center"
-                  Margin="0,15,0,0"
-                  Opacity="0.7"
-                  FontSize="12"/>
+                        <TextBlock Text="Confirm Password" Margin="0,0,0,5"/>
+                        <winui:PasswordBox x:Name="ConfirmPasswordBox"
+                                    Margin="0,0,0,15"
+                                    Padding="8"/>
+
+                        <TextBlock Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
+                                  Foreground="Red"
+                                  TextWrapping="Wrap"
+                                  Margin="0,10"/>
+                    </StackPanel>
+
+                    <Button Grid.Row="3"
+                            Content="Create Admin Account"
+                            Style="{StaticResource AccentButtonStyle}" 
+                            HorizontalAlignment="Center"
+                            Width="250"
+                            Height="36"
+                            CornerRadius="4"
+                            Click="OnCreateAdminClick"/>
+                            
+                    <TextBlock Grid.Row="4"
+                              Text="{x:Bind ViewModel.VersionDescription, Mode=OneWay}"
+                              HorizontalAlignment="Center"
+                              Margin="0,15,0,0"
+                              Opacity="0.7"
+                              FontSize="12"/>
+                </Grid>
+            </Grid>
+        </Border>
 
         <winui:ContentDialog x:Name="BackupKeyDialog"
-                      Title="Backup Key"
-                      PrimaryButtonText="Copy"
-                      SecondaryButtonText="Close"
-                      DefaultButton="Primary"
-                      IsPrimaryButtonEnabled="True"
-                      IsSecondaryButtonEnabled="True"
-                      PrimaryButtonClick="OnCopyBackupKey"
-                      SecondaryButtonClick="OnCloseBackupKeyDialog">
+                          Title="Backup Key"
+                          PrimaryButtonText="Copy"
+                          SecondaryButtonText="Close"
+                          DefaultButton="Primary"
+                          IsPrimaryButtonEnabled="True"
+                          IsSecondaryButtonEnabled="True"
+                          PrimaryButtonClick="OnCopyBackupKey"
+                          SecondaryButtonClick="OnCloseBackupKeyDialog">
             <StackPanel>
                 <TextBlock Text="Vui lòng lưu lại backup key cẩn thận. Bạn sẽ cần dùng nó để khôi phục tài khoản khi quên thông tin đăng nhập."
                          TextWrapping="Wrap"
