--- a/StormPC/StormPC/Views/Login/LoginWindow.xaml
+++ b/StormPC/StormPC/Views/Login/LoginWindow.xaml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Window
     x:Class="StormPC.Views.Login.LoginWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -7,109 +8,140 @@
     xmlns:winui="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d">
 
-    <Grid Margin="20">
-        <Grid.Resources>
-            <Style x:Key="TransparentToggleButton" TargetType="ToggleButton">
-                <Setter Property="Background" Value="Transparent"/>
-                <Setter Property="BorderBrush" Value="Transparent"/>
-                <Setter Property="BorderThickness" Value="0"/>
-                <Setter Property="Padding" Value="8,4"/>
-                <Setter Property="HorizontalAlignment" Value="Left"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-                <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                <Setter Property="VerticalContentAlignment" Value="Center"/>
-                <Setter Property="FontFamily" Value="{ThemeResource SymbolThemeFontFamily}"/>
-                <Setter Property="Width" Value="32"/>
-                <Setter Property="Height" Value="32"/>
-            </Style>
-        </Grid.Resources>
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <!-- Logo -->
-        <Image Grid.Row="0" 
-               Source="/Assets/img/logo/logo-512x512.png"
-               Width="120" 
-               Height="120"
-               Margin="0,0,0,10"/>
-
-        <TextBlock Grid.Row="1"
-                 Text="StormPC Login"
-                 FontSize="24"
-                 FontWeight="Bold"
-                 HorizontalAlignment="Center"
-                 Margin="0,0,0,30"/>
-
-        <StackPanel Grid.Row="2" Margin="0,20">
-            <TextBlock Text="Username" Margin="0,0,0,5"/>
-            <winui:TextBox x:Name="UsernameTextBox" 
-                     Text="{x:Bind ViewModel.Username, Mode=TwoWay}"
-                     Margin="0,0,0,15"
-                     Padding="5"/>
-
-            <TextBlock Text="Password" Margin="0,0,0,5"/>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Border HorizontalAlignment="Center" 
+                VerticalAlignment="Center"
+                Width="650"
+                Height="640"
+                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                BorderThickness="1"
+                CornerRadius="8"
+                Translation="0,0,32">
             <Grid>
-                <winui:PasswordBox x:Name="PasswordBox"
-                            Password="{x:Bind ViewModel.Password, Mode=TwoWay}"
-                            PasswordRevealMode="Hidden"
-                            Margin="0,0,0,15"
-                            Padding="5"/>
-                <ToggleButton x:Name="ShowPasswordButton"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            Margin="0,0,5,15"
-                            Style="{StaticResource TransparentToggleButton}"
-                            IsEnabled="{x:Bind ViewModel.IsPasswordViewable, Mode=OneWay}">
-                    <FontIcon Glyph="&#xE7B3;" FontSize="16"/>
-                </ToggleButton>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="400"/>
+                </Grid.ColumnDefinitions>
+
+                <!-- Infographic Image -->
+                <Border Grid.Column="0" 
+                        Background="#0078D4"
+                        CornerRadius="8,0,0,8">
+                    <Image Source="/Assets/img/logo/StormPC_Infographic.png"
+                           Height="640"
+                           Width="250"
+                           Stretch="UniformToFill"/>
+                </Border>
+
+                <!-- Login Form -->
+                <Grid Grid.Column="1" Margin="32,24">
+                    <Grid.Resources>
+                        <Style x:Key="TransparentToggleButton" TargetType="ToggleButton">
+                            <Setter Property="Background" Value="Transparent"/>
+                            <Setter Property="BorderBrush" Value="Transparent"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <Setter Property="Padding" Value="8,4"/>
+                            <Setter Property="HorizontalAlignment" Value="Left"/>
+                            <Setter Property="VerticalAlignment" Value="Center"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                            <Setter Property="VerticalContentAlignment" Value="Center"/>
+                            <Setter Property="FontFamily" Value="{ThemeResource SymbolThemeFontFamily}"/>
+                            <Setter Property="Width" Value="32"/>
+                            <Setter Property="Height" Value="32"/>
+                        </Style>
+                    </Grid.Resources>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <!-- Logo -->
+                    <Image Grid.Row="0" 
+                           Source="/Assets/img/logo/logo-512x512.png"
+                           Width="120" 
+                           Height="120"
+                           Margin="0,0,0,10"/>
+
+                    <TextBlock Grid.Row="1"
+                             Text="StormPC Login"
+                             FontSize="24"
+                             FontWeight="Bold"
+                             HorizontalAlignment="Center"
+                             Margin="0,0,0,30"/>
+
+                    <StackPanel Grid.Row="2" Margin="0,20">
+                        <TextBlock Text="Username" Margin="0,0,0,5"/>
+                        <winui:TextBox x:Name="UsernameTextBox" 
+                                 Text="{x:Bind ViewModel.Username, Mode=TwoWay}"
+                                 Margin="0,0,0,15"
+                                 Padding="8"/>
+
+                        <TextBlock Text="Password" Margin="0,0,0,5"/>
+                        <Grid>
+                            <winui:PasswordBox x:Name="PasswordBox"
+                                    Password="{x:Bind ViewModel.Password, Mode=TwoWay}"
+                                    PasswordRevealMode="Hidden"
+                                    Margin="0,0,0,15"
+                                    Padding="8"/>
+                            <ToggleButton x:Name="ShowPasswordButton"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Center"
+                                        Margin="0,0,5,15"
+                                        Style="{StaticResource TransparentToggleButton}"
+                                        IsEnabled="{x:Bind ViewModel.IsPasswordViewable, Mode=OneWay}">
+                                <FontIcon Glyph="&#xE7B3;" FontSize="16"/>
+                            </ToggleButton>
+                        </Grid>
+
+                        <CheckBox x:Name="RememberMeCheckBox"
+                                 Content="Remember me"
+                                 Margin="0,0,0,15"
+                                 IsChecked="{x:Bind ViewModel.RememberMe, Mode=TwoWay}"/>
+
+                        <TextBlock Text="Khôi phục tài khoản bằng backup key"
+                                  Foreground="{ThemeResource SystemAccentColor}"
+                                  Tapped="OnRecoverAccountTapped"
+                                  Margin="0,0,0,15"/>
+
+                        <TextBlock Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
+                                  Foreground="Red"
+                                  TextWrapping="Wrap"
+                                  Margin="0,10"/>
+                    </StackPanel>
+
+                    <Button Grid.Row="3"
+                            Content="Login"
+                            Style="{StaticResource AccentButtonStyle}"
+                            HorizontalAlignment="Center"
+                            Width="250"
+                            Height="36"
+                            CornerRadius="4"
+                            Click="OnLoginClick"/>
+                            
+                    <TextBlock Grid.Row="4"
+                              Text="{x:Bind ViewModel.VersionDescription, Mode=OneWay}"
+                              HorizontalAlignment="Center"
+                              Margin="0,15,0,0"
+                              Opacity="0.7"
+                              FontSize="12"/>
+                </Grid>
             </Grid>
-
-            <CheckBox x:Name="RememberMeCheckBox"
-                     Content="Remember me"
-                     Margin="0,0,0,15"
-                     IsChecked="{x:Bind ViewModel.RememberMe, Mode=TwoWay}"/>
-
-            <TextBlock Text="Khôi phục tài khoản bằng backup key"
-                      Foreground="{ThemeResource SystemAccentColor}"
-                      Tapped="OnRecoverAccountTapped"
-                      Margin="0,0,0,15"/>
-
-            <TextBlock Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
-                      Foreground="Red"
-                      TextWrapping="Wrap"
-                      Margin="0,10"/>
-        </StackPanel>
-
-        <Button Grid.Row="3"
-                Content="Login"
-                Style="{StaticResource AccentButtonStyle}"
-                HorizontalAlignment="Center"
-                Width="250"
-                Height="32"
-                Click="OnLoginClick"/>
-                
-        <TextBlock Grid.Row="4"
-                  Text="{x:Bind ViewModel.VersionDescription, Mode=OneWay}"
-                  HorizontalAlignment="Center"
-                  Margin="0,15,0,0"
-                  Opacity="0.7"
-                  FontSize="12"/>
+        </Border>
 
         <winui:ContentDialog x:Name="RecoverAccountDialog"
-                      Title="Recover Account"
-                      PrimaryButtonText="Recover"
-                      SecondaryButtonText="Cancel"
-                      DefaultButton="Secondary"
-                      IsPrimaryButtonEnabled="True"
-                      IsSecondaryButtonEnabled="True"
-                      PrimaryButtonClick="OnRecoverAccountConfirm"
-                      SecondaryButtonClick="OnRecoverAccountCancel">
+                          Title="Recover Account"
+                          PrimaryButtonText="Recover"
+                          SecondaryButtonText="Cancel"
+                          DefaultButton="Secondary"
+                          IsPrimaryButtonEnabled="True"
+                          IsSecondaryButtonEnabled="True"
+                          PrimaryButtonClick="OnRecoverAccountConfirm"
+                          SecondaryButtonClick="OnRecoverAccountCancel">
             <StackPanel>
                 <TextBlock Text="Please enter your backup key to recover your account."
                          TextWrapping="Wrap"
